--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                 <li><a href="contact-me.html">Contact</a></li>
             </ul>
         </header>
-        <p>Projects coming soon!</p>
+        <p>My name is Tom and I am a web developer. I'm currently working on the Front End Web Development Nanodegree by Udacity. This is a really nice course which involves several projects which I will be putting here soon! I'll keep you posted ;)
+        </p>
     </body>
 </html>
