--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-		<li><a href="college-notes.html">College Notes</a></li>
+		<li><a href="college-notes.html">Notes</a></li>
                 <li><a href="contact-me.html">Contact</a></li>
             </ul>
         </header>
