Added previous button for Notes_01 and changed all instances of 'Programmierung 1' to 'Programming 1' to make use of English more consistent

--- a/college-notes.html
+++ b/college-notes.html
@@ -8,7 +8,7 @@
 	<h1>College Notes</h1>
 	<hr/>
 	<ul>
-		<li><a href="college-notes/programmierung_1/programmierung_1.html">Programmierung 1</a></li>
+		<li><a href="college-notes/programmierung_1/programmierung_1.html">Programming 1</a></li>
 	</ul>
 </body>
 </html>
