--- a/college-notes/programmierung_1/Notes_01-Foundations.html
+++ b/college-notes/programmierung_1/Notes_01-Foundations.html
@@ -91,4 +91,4 @@
 <p><strong>Programming Paradigms</strong> - Imperative versus functional versus logic-oriented.</p>
 <p><strong>Programming Constructs</strong> - Sequence, Decision, Iteration.</p>
 <hr />
-<p><a href="./programmierung_1.html">Contents</a> <a href="./Notes_02-Hello_World.html">Next</a></p>
+<p><a href="./programmierung_1.html">Previous</a><a href="./programmierung_1.html">Contents</a> <a href="./Notes_02-Hello_World.html">Next</a></p>
