--- a/college-notes/programmierung_1/programmierung_1.html
+++ b/college-notes/programmierung_1/programmierung_1.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset=UTF-8>
-	<title>Programmierung 1</title>
+	<title>Programming 1</title>
 </head>
 <body>
-	<h1>Programmierung 1</h1>
+	<h1>Programming 1</h1>
 	<hr/>
 	<ul>
 		<li><a href="Notes_01-Foundations.html">01. Foundations</a></li>
