--- a/college-notes/programmierung_1/Notes_01-Foundations.html
+++ b/college-notes/programmierung_1/Notes_01-Foundations.html
@@ -19,7 +19,7 @@
 </ol>
 <ul>
 <li>Flow Charts</li>
-<li>Structograms (also known as a Nassi-Schneiderman diagram)</li>
+<li>Structograms (also known as Nassi-Schneiderman diagrams)</li>
 <li>UML Diagrams (Unified Modelling Language)</li>
 </ul>
 <ol start="2">
@@ -31,14 +31,14 @@
 <li>Programming Languages</li>
 </ul>
 <h2>PROGRAMMING LANGUAGES</h2>
-<p>A programming language is a language with strict formal syntax and vocabulary used in the formation of programs. It's purpose is to create a method of describing algorithms in such way that allows for humans to understand them while simultaneously allowing for automatic conversion into executable machine code.</p>
+<p>A programming language is a language with strict formal syntax and vocabulary used in the formation of programs. It's purpose is to create a method of describing algorithms in such a way that allows for humans to understand them while simultaneously allowing for automatic conversion into executable machine code.</p>
 <p>There are two main types of code:</p>
 <ul>
 <li>Source Code : Code written in a programming language</li>
 <li>Machine Code : Code written in zeros and ones that can be executed by a computer (this is usually converted from source code)</li>
 </ul>
-<p>Converting Source Code into Machine Code is a process called <em>compiling</em> and that the program that does this is called a compiler. There are however alternatives to this. The most common being a program called a compiler which interprets and carries out the code bit by bit (often line by line). Some programming languages are best suited for compiling while others work better with interpreters.</p>
-<p>When compiling most programs don't have the entire program text translated to machine at once. Commonly used parts of programs (such as I/O functionality) will often be stored in libraries where precompiled versions are kept available. These compiled bits of codes are the joined together by a program called a <em>linker</em>.</p>
+<p>Converting source code into machine code is a process called <em>compiling</em> and the program that does this is called a compiler. There are however alternatives to this. The most common being a program called a <em>interpreter</em> which interprets and carries out the code as it goes (often line by line). Some programming languages are best suited for compiling while others work better with interpreters.</p>
+<p>When compiling most programs don't have the entire program text translated to machine code at once. Commonly used parts of programs (such as I/O functionality) will often be stored in libraries where precompiled versions are kept available. These compiled bits of codes are the joined together by a program called a <em>linker</em>.</p>
 <p>An alternative to this is a dynamic link library where the compiled parts are linked only when the program is run.</p>
 <h2>PROGRAMMING PARADIGMS</h2>
 <p>Different paradigms often suit different sorts of programming and thus different languages often have very different structures. Some of the following will be listed below:</p>
@@ -67,13 +67,13 @@
 </ul>
 </li>
 </ul>
-<p><em>Logic-oriented programming</em> comprises of a set of rules and a list of facts. You can then make requests based on this information. For example a program with the rule <code>When it rains, you get wet</code> and the fact <code>It is raining</code> could be asked if you're wet. And given the rules and the information that it has will answer positively. Obviously this is a very simple example but this is the fundamental principle.</p>
+<p><em>Logic-oriented programming</em> comprises of a set of rules and a list of facts. You can then make requests based on this information. For example a program with the rule <code>When it rains, you get wet</code> and the fact <code>It is raining</code> could be asked if you're wet. And given the rules and the information that it has, it will answer positively. Obviously this is a very simple example but this is the fundamental principle.</p>
 <p><em>Functional programming</em> is made up of functions that are built up in a mathematical way. Each occurence of a function can be replaced by its result. This means that functions don't have any side effects as there are no variables.</p>
 <p><em>Imperative Programming</em> is made up of a series of instructions. These instructions can save, read and edit variables.</p>
 <p>There are many other types of programming such as sequential vs parallel, typed versus non typed, and object-oriented programming.</p>
-<p>C++ is classified as an <em>imperative, procedural language</em>. This means that it assigns values to variables and that these variables can be reassigned new values and that it is made up of a list of instructions.</p>
+<p>C++ is classified as an <em>imperative, procedural language</em>. This means that it assigns values to variables, that these variables can be reassigned new values and that it is made up of a list of instructions.</p>
 <p>It can also be described as a <em>sequential language</em> which means that it's instructions are carried out in the order that they are written.</p>
-<p>And finally C++ is also a <em>strongly typed language</em>. This means that variables have a predetermined set of possible values that allow for different sorts of operations such as int, double or string.</p>
+<p>And finally C++ is also a <em>strongly typed language</em>. This means that variables have a predetermined range of possible values that allow for different sorts of operations such as int, double or string.</p>
 <h2>STRUCTURED PROGRAM THEOREM</h2>
 <p>Any computable function can be carried out with the following three programming constructs:</p>
 <ol>
@@ -84,8 +84,8 @@
 <p>This theorem is credited to Böhm and Jacopini.</p>
 <h2>TERMS</h2>
 <p><strong>Algorithms</strong> - Unambiguous series of instructions.</p>
-<p><strong>(imperative) Programs</strong> - Implementations of algorithms.</p>
-<p><strong>Programming Language</strong> - A formalised language used for the creations of programs.</p>
+<p><strong>(Imperative) Programs</strong> - Implementations of algorithms.</p>
+<p><strong>Programming Language</strong> - A formalised language used for the creation of programs.</p>
 <p><strong>Compiler</strong> - A program that translates source code into machine code.</p>
 <p><strong>Interpreter</strong> - &quot;Direct&quot; execution of source code.</p>
 <p><strong>Programming Paradigms</strong> - Imperative versus functional versus logic-oriented.</p>
